# DeBleed

./: .gitignore  BUILD.md  CMakeLists.txt  DeBleed.jucer  claude.md
Builds/MacOSX/: Info-AU.plist  Info-Standalone_Plugin.plist  Info-VST3.plist  Info-VST3_Manifest_Helper.plist
Builds/MacOSX/DeBleed.xcodeproj/: project.pbxproj
JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h
plugin/: CMakeLists.txt
plugin/Source/: ActiveFilterPool.cpp  ActiveFilterPool.h  ArcMeter.cpp  ArcMeter.h  AudioDropZone.cpp  AudioDropZone.h  BandMapper.cpp  BandMapper.h  ConfidenceMeter.cpp  ConfidenceMeter.h  ControlPanel.cpp  ControlPanel.h  DeBleedLookAndFeel.cpp  DeBleedLookAndFeel.h  DifferentiableBiquadChain.cpp  DifferentiableBiquadChain.h  DynamicEQ.cpp  DynamicEQ.h  EQCurveDisplay.cpp  EQCurveDisplay.h  EnvelopeFollower.cpp  EnvelopeFollower.h  GainReductionMeter.cpp  GainReductionMeter.h  GateBandSelector.cpp  GateBandSelector.h  IIRFilterBank.cpp  IIRFilterBank.h  LinkwitzRileyGate.cpp  LinkwitzRileyGate.h  Neural5045Engine.cpp  Neural5045Engine.h  NeuralGateEngine.cpp  NeuralGateEngine.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  RTAVisualization.cpp  RTAVisualization.h  (+14 more)
python/: differentiable_svf.py  differentiable_svf_original.py  neural5045_trainer.py  requirements.txt  test_svf_frequency_response.py  test_trainer.py  trainer.py
scripts/: touch_bundles.sh  update_timestamp.sh
